# 3D-reconstruction-utils

./: .gitignore  CMakeLists.txt  README.md
docs/: Characteristic-point-VIO .ipynb  loop_detection.ipynb  non-characterisctic-point-VIO.ipynb
icp/: CMakeLists.txt  icp.cpp  icp.h
include/: demos.h  draw_trajectory.h  range2pc.h  utils.h  visual_odometry.h  visualize.h
src/: demos.cpp  draw_trajectory.cpp  main.cpp  range2pc.cpp  utils.cpp  visual_odometry.cpp  visualize.cpp
